// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment active, editable comment renders 1`] = `
<div
  className="comment"
  id="comment-1"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "top": "0px",
      "zIndex": "99982",
    }
  }
>
  <div
    className="comment__body"
  >
    <div
      className="saving-spinner--idle"
    />
    <TextField
      className="comment__pointdelta-field"
      disabled={true}
      fullWidth={true}
      id="pointdelta-field"
      leftIconStateful={true}
      lineDirection="left"
      onChange={[Function]}
      passwordIcon={
        <FontIcon
          iconClassName="material-icons"
        >
          remove_red_eye
        </FontIcon>
      }
      pattern="^d+(\\\\.|\\\\,)\\\\d{1}"
      placeholder="Deduction"
      rightIconStateful={true}
      step={0.5}
      type="number"
      value={3}
    />
    <div
      className="comment__rubric-comment"
    >
      Missing a semicolon
    </div>
    <TextareaAutosize
      className="comment__textarea"
      inputRef={[Function]}
      maxRows={8}
      minRows={2}
      onChange={[Function]}
      onHeightChange={[Function]}
      onKeyPress={[Function]}
      useCacheForDOMMeasurements={false}
      value="Extra text"
    />
    <div>
      <withInk(withTooltip(Button))
        className="button--comment"
        forceIconFontSize={true}
        forceIconSize={20}
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
        onClick={[Function]}
        tooltipDelay={1}
        tooltipLabel="Save comment [SHIFT + ENTER]"
        tooltipPosition="left"
      >
        save
      </withInk(withTooltip(Button))>
      <withInk(withTooltip(Button))
        className="button--comment"
        forceIconFontSize={true}
        forceIconSize={20}
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
        onClick={[Function]}
        tooltipDelay={50}
        tooltipLabel="Delete comment"
        tooltipPosition="left"
      >
        delete
      </withInk(withTooltip(Button))>
    </div>
    <div
      className="comment__footer"
    >
      <div
        className="comment__footer__line"
      >
        line: 
        1
         
      </div>
      <div
        className="comment__footer__author"
      >
        author: grader@myschool.edu
      </div>
    </div>
  </div>
</div>
`;

exports[`Comment inactive, editable comment renders 1`] = `
<div
  className="comment"
  id="comment-1"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "top": "0px",
      "zIndex": "99982",
    }
  }
>
  <div
    className=" comment__pointdelta--negative"
  >
    -3
     
  </div>
  <div
    className="comment__body"
  >
    <div
      className="saving-spinner--idle"
    />
    <div
      className="comment__rubric-comment"
    >
      Missing a semicolon
    </div>
    <div
      className="comment__text"
    >
      <Component
        source="Extra text"
      />
    </div>
    <div
      className="comment__footer"
    >
      <div
        className="comment__footer__line"
      >
        line: 
        1
         
      </div>
      <div
        className="comment__footer__author"
      >
        author: grader@myschool.edu
      </div>
      <div
        className="comment__footer__buttons"
      >
        <withInk(withTooltip(Button))
          className="button--comment"
          forceIconFontSize={true}
          forceIconSize={20}
          icon={true}
          inkTransitionEnterTimeout={450}
          inkTransitionLeaveTimeout={300}
          inkTransitionOverlap={150}
          onClick={[Function]}
        >
          delete
        </withInk(withTooltip(Button))>
      </div>
    </div>
  </div>
</div>
`;

exports[`Comment readOnly comment renders 1`] = `
<div
  className="comment"
  id="comment-1"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "top": "0px",
      "zIndex": "99982",
    }
  }
>
  <div
    className="comment__body"
  >
    <div
      className="saving-spinner--idle"
    />
    <div
      className=" comment__pointdelta--negative"
    >
      -3
       
    </div>
    <div
      className="comment__rubric-comment"
    >
      Missing a semicolon
    </div>
    <Component
      source="Extra text"
    />
    <div
      className="comment__footer"
    >
      <div
        className="comment__footer__line"
      >
        line: 
        1
         
      </div>
      <div
        className="comment__footer__author"
      >
        author: grader@myschool.edu
      </div>
    </div>
  </div>
</div>
`;
